--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	font-size: 16px;
+	font-size: 18px;
 	font-family: "Montserrat";
 }
 
@@ -9,6 +9,7 @@ body {
 }
 
 .landing {
+	margin-top:2.5em;
 	display: grid;
 	align-items: center;
 	grid-template-columns: 70% 30%;
@@ -23,29 +24,46 @@ body {
 	font-weight: 200;
 }
 
+.landing-illustration img{
+	display: block;
+	margin: auto;
+	height: 500px;
+	width: 500px;
+}
+
 .btn-theme {
-    background-image: linear-gradient(-45deg, #ff6f00, #ffa800);
+	background-image: linear-gradient(-45deg, #ff6f00, #ffa800);
 	padding: 0.7em;
 	border: none;
 }
 
 .navbar button {
-    color: #ff6f00;
-    background:none;
-    border:none;
-    transition: 0.5s all;
+	color: #ff6f00;
+	background: none;
+	border: none;
+	transition: 0.5s all;
 }
 
 .navbar button:hover {
-    color: #fff;
-    background: #ff6f00;
-    border:none;
+	color: #fff;
+	background: #ff6f00;
+	border: none;
 }
 
 @media only screen and (max-width: 768px) {
+	body {
+		font-size: 14px;
+	}
+	.landing-illustration img {
+		height: 300px;
+		width: 300px;
+	}
 	.landing {
 		grid-template-columns: 100%;
-		grid-template-rows: 50% 50%;
+		grid-template-rows: 70% 40%;
 		align-items: center;
+	}
+	.landing-text {
+		text-align: center;
 	}
 }
